moved health in api/v1
