# controllers/health.go
@@ -7,6 +7,15 @@ import (
 
 type HealthController struct{}
 
+// HealthController godoc
+//
+//	@Summary		Check Status
+//	@Description	Check the status of the REST API
+//	@Tags			health
+//	@Accept			json
+//	@Produce		json
+//	@Success		200	{string}	message
+//	@Router			/health [get]
 func (h HealthController) Status(c *gin.Context) {
 	c.String(http.StatusOK, "Working!")
 }
